--- a/index.css
+++ b/index.css
@@ -810,6 +810,11 @@ canvas {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.git-svg {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+}
 /* ----- project end ----- */
 
 /* ----- mini project start ----- */
@@ -831,20 +836,73 @@ canvas {
   border-radius: 1rem;
   box-shadow: 5px 7px 18px -10px var(--color-shadow-dark);
   border: 2px solid transparent;
-  transition:
-    transform 0.28s cubic-bezier(0.34, 1.56, 0.64, 1),
-    box-shadow 0.28s cubic-bezier(0.34, 1.56, 0.64, 1),
-    border-color 0.28s ease,
-    z-index 0.28s ease;
 }
-.hoverable:hover .mini-project {
-  transform: translateY(-50px) scale(2);
-  box-shadow:
-    0 30px 60px rgba(0, 0, 0, 0.40),
-    0 12px 24px rgba(0, 0, 0, 0.32);
-  border-color: var(--color-light-gray);
+.flip-card {
+  perspective: 800px;
 }
-
+.flip-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.6s ease;
+}
+.flip-front,
+.flip-back {
+  position: absolute;
+  top: 0; 
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  backface-visibility: hidden;
+}
+.flip-back {
+  transform: rotateY(180deg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #3f3f3ff8;
+  color: var(--color-white);
+}
+.flip-card:hover .flip-inner {
+  transform: rotateY(180deg);
+}
+.flip-back-content {
+  padding: 2rem;
+}
+.flip-back-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.flip-back-desc{
+  margin-bottom: 1rem;
+}
+.flip-back-content .project-stack-list {
+  gap: 0.7rem;
+  margin-bottom: 1rem;
+}
+.flip-back-content .project-stack {
+  border-radius:0.5rem;
+}
+.flip-back-content .project-links {
+  display: inline-grid;
+  gap: 0px;
+}
+.flip-back-content .project-links a {
+  display: inline-flex;
+  border-radius: 0.75rem;
+  border: 1px solid var(--color-white);
+  padding: 0.5rem;
+  margin-top: 0.75rem;
+}
+.flip-back-content .project-links a svg,
+.flip-back-content .project-links a i {
+  margin-right: 6px;
+  margin-top: 4.7px;
+  margin-left: 2px;
+}
 /* ----- mini project end ----- */
 
 /* ----- contact section start ----- */
@@ -1000,6 +1058,12 @@ canvas {
 
 /* ----- footer section end ----- */
 
+/* 347px 이하 */
+@media screen and (max-width: 347px) {
+  .git-svg {
+    display: none;
+  }
+}
 /* 640px 이상 */
 @media (min-width: 640px) {
    .pc {
